Align worldmap correctly

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -50,8 +50,7 @@ figure {
   overflow: hidden;
   margin: 0;
 
-  & img,
-  & svg {
+  & img {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -73,6 +72,7 @@ figure {
     right: 50%;
     width: 100vw;
     height: auto;
+    text-align: center;
 
     & img,
     & svg {
